Fixed Double Scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+
+}
+
+body {
+  overflow-y: hidden;
 }
 
 a {
